[package]
name = "ve-tos-rust-sdk"
version = "2.9.2"
edition = "2021"
authors = ["xiangshijian"]
description = "volcengine offical tos rust sdk"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "generic",
]

[dependencies]
ve-tos-generic = { version = "0.0.7", path = "generic" }
reqwest = { version = "0.11.13", features = ["blocking", "stream", "json", "hickory-dns"], default-features = false }
hyper = "0.14.32"
serde = { version = "1.0.156", features = ["derive"], default-features = false }
sha2 = { version = "0.10", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
once_cell = "1.19.0"
url = "2.5.0"
arc-swap = "1.6.0"
chrono = "0.4.20"
hex = "0.4.3"
hmac = "0.12"
serde_json = "1.0"
base64 = "0.21.7"
urlencoding = { version = "2.1.3", default-features = false }
regex = { version = "1.10.3", default-features = false }
async-trait = "0.1.77"
futures-core = "0.3.30"
bytes = "1.5.0"
futures-util = "0.3.30"
async-channel = "2.3.1"
tokio = { version = "1.36.0", optional = true }
tokio-util = { version = "0.7.10", optional = true }
uuid = { version = "1.16.0", features = ["v1", "v4"] }
crc64fast = "1.1.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
hickory-resolver = "0.25.2"
rand = "0.8.5"



[features]
default = ["asynchronous", "use-rustls"]
asynchronous = []
use-native-tls = ["reqwest/native-tls"]
use-rustls = ["reqwest/rustls-tls"]
tokio-runtime = ["tokio", "tokio-util"]

[dev-dependencies]
scopeguard = "1.2.0"
tokio = "1.36.0"
tokio-util = "0.7.10"
